fix spacing

--- a/src/components/MainContents/List/MainSectionList.scss
+++ b/src/components/MainContents/List/MainSectionList.scss
@@ -308,7 +308,7 @@ span.info-span {
         font-size: 2.5vw;
         letter-spacing: 3px;
         align-items: center;
-        padding: 0 5%;
+        padding: 0px 0px 0px 35px;
         text-align: left;
         color: white;
         white-space: nowrap;
